2009-11-23  Tobias C. Rittweiler  <tcr@freebits.de>

	* swank-asdf.lisp (system-contains-file-p): Previous definition
	didn't properly propagate positive return value of recursive
	call. Fix that.

2009-11-22  Stas Boukarev  <stassats@gmail.com>

	* slime-repl.el (slime-repl-history-remove-duplicates): New variable,
	if set to T previous matching history entries are removed before
	appending a new item. Default value is NIL.
	(slime-repl-history-trim-whitespaces): New variable, when T remove
	whitespaces at the beginning and end of a new history item.
	Default value is NIL.
	(slime-repl-add-to-input-history): Implement behaviour of the variables
	above.
	(slime-string-trim): New function, works like cl:string-trim.

2009-11-22  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime-fontifying-fu.el (slime-compute-region-for-font-lock): Set
	an upper limit for the starting point of searching for suppressed
	forms.

	* slime-parse.el (slime-make-form-spec-from-string): Minor
	optimizations.
	(slime-parse-form-upto-point): Refactored to not use `reduce' but
	bultins.
	(slime-make-form-spec-from-string, slime-parse-form-upto-point)
	(slime-compare-char-syntax): Byte-compile.

2009-11-21  Tobias C. Rittweiler  <tcr@freebits.de>

	* swank-asdf.lisp (asdf-determine-system): Also try to determine
	the current system by looking at the buffer-package.

	* slime-asdf (slime-read-system-name): Adapted accordingly.

2009-11-20  Stas Boukarev  <stassats@gmail.com>

	* slime-repl.el (slime-repl-position-in-history): Add new optional
	parameter `exclude-string'.
	(slime-repl-history-replace): Don't replace history item if it's exactly
	matching the current input, search for the next match instead.

2009-11-19  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime-asdf.el (slime-query-replace-system): Enable TAB
	completion of symbol names.

	* slime-fuzzy.el (slime-fuzzy-completions): Do not use
	`slime-find-buffer-package' it's an internal operation of
	`slime-current-buffer'.
