@@ -1,5 +1,12 @@
 2009-11-23  Tobias C. Rittweiler  <tcr@freebits.de>
 
+	* swank-asdf.lisp (operate-on-system-for-emacs),
+	(operate-on-system): Muffle ASDF:COMPILE-ERROR because we reuse
+	Slime's compilation error reportery anyway, and sldb popping up is
+	just annoying.
+
+2009-11-23  Tobias C. Rittweiler  <tcr@freebits.de>
+
 	* swank-asdf.lisp (system-contains-file-p): Previous definition
 	didn't properly propagate positive return value of recursive
 	call. Fix that.
